# aa

./: .gitignore
hw_01/: hw.drawio  inf_gr.drawio  man_dr.drawio
lab_01/docs/: 00-title.tex  10-analysis.tex  30-impl.tex  40-research.tex  50-conclusion.tex  51-biblio.bib  preamble.inc.tex
lab_01/src/: getCPUTime.cpp  levenstein.cpp  levenstein.hpp  main.cpp  manual_input.cpp  manual_input.hpp  matrix.hpp  src  string_gen.cpp  time_compare.cpp  time_compare.hpp
lab_02/: algorithms.cpp  algorithms.hpp  arr_gen.cpp  arr_gen.hpp  main.cpp  matrix.hpp  src.pro  time_compare.cpp  time_compare.hpp
lab_03/: bubble_best_results.txt  bubble_random_results.txt  bubble_worst_results.txt  insertion_best_results.txt  insertion_random_results.txt  insertion_worst_results.txt  makefile  quick_best_results.txt  quick_random_results.txt  quick_worst_results.txt
lab_03/docs/: 51-biblio.bib  bsort.drawio  isort.drawio  qsort.drawio
lab_03/inc/: gen.h  sorts.h  statistic.h
lab_03/src/: gen.c  main.c  plot_graphs.py  sorts.c  statistic.c
lab_05/: buf
lab_05/src/: CMakeLists.txt  main.cpp
lab_06/: CMakeLists.txt  ant.cpp  ant.h  ant_alg.cpp  ant_alg.h  base_comivoyadger_alg.cpp  base_comivoyadger_alg.h  brute.cpp  brute.h  main.cpp  matrix.h  route.txt
lab_06/report/: 51-biblio.bib  report.dvi  report.synctex(busy)  report.tex
lab_06/report/inc/: matrix_20.csv  matrix_2001.csv  matrix_201.csv  time_compare.csv
lab_07/docs/: 03-introduction.tex  04-analysis.tex  05-design.tex  06-implementation.tex  07-research.tex  08-conclusion.tex  biblio.bib  thesis.bbl  thesis.bcf  (+3 more)
(+15 files in other folders)
